# ebml-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  schema.json
benches/: benchmark.rs
src/: decoder.rs  ebml.rs  encoder.rs  lib.rs  schema.rs  vint.rs
tests/: decoder.rs  decoder_encoder.rs  encoder_decoder.rs  vint.rs  vint_fuzzing.rs
