[package]
name = "ebml"
version = "0.0.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"
repository = "https://github.com/ebml-rs/ebml-rs"
keywords = ["webm", "ebml"]
license-file = "LICENSE"
readme = "README.md"
description = "ebml parser."
documentation = "https://github.com/ebml-rs/ebml-rs"



[dependencies]
log-derive = "0.3"
log = "0.4"
err-derive = "*"
byteorder = "1"

[dev-dependencies]
statrs = "0.11.0"
