[package]
name = "ebml"
version = "0.0.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"
repository = "https://github.com/ebml-rs/ebml-rs"
keywords = ["webm", "ebml"]
license-file = "LICENSE"
readme = "README.md"
description = "ebml parser."
documentation = "https://github.com/ebml-rs/ebml-rs"

[dependencies]
byteorder = "1.3"
chrono = "0.4"
derive_more = "0.15"
err-derive = "0.1"
log = "0.4"
log-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
log = "0.4"
log-derive = "0.3"
statrs = "0.11"
