[package]
name = "ebml"
version = "0.0.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"
repository = "https://github.com/ebml-rs/ebml-rs"
keywords = ["webm", "ebml"]
license-file = "LICENSE"
readme = "README.md"
description = "ebml parser."
documentation = "https://github.com/ebml-rs/ebml-rs"

[dependencies]
byteorder = "1.3"
chrono = { features = ["serde"], version = "0.4" }
derivative = "1.0"
derive_more = "0.15"
err-derive = "0.1"
log = "0.4"
log-derive = "0.3"
proptest = "0.9"
proptest-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.2"
dotenv = "0.14"
env_logger = "0.6"
insta = "0.8.1"
metered = "0.2"
metered-macro = "0.2"
mockiato = "0.8"

[[bench]]
harness = false
name = "benchmark"
